--- a/src/index.html
+++ b/src/index.html
@@ -1,14 +1,15 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="utf-8">
-  <title>ParkFinder</title>
-  <base href="/">
+    <head>
+        <meta charset="utf-8" />
+        <title>ParkFinder</title>
+        <base href="/" />
 
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="icon" type="image/x-icon" href="favicon.ico">
-</head>
-<body>
-  <app-root></app-root>
-</body>
+        <meta name="viewport" content="width=device-width, initial-scale=1" />
+        <link rel="icon" type="image/x-icon" href="favicon.ico" />
+        <script src="http://maps.googleapis.com/maps/api/js?key=AIzaSyD9kUFyT1QNYLuspWKck7NxwvZJ70bkXJM&libraries=places"></script>
+    </head>
+    <body>
+        <app-root></app-root>
+    </body>
 </html>
